re added part A.1

--- a/assignment-3/kim_changsu_reyes-cortes_jesse_assignment3.ipynb
+++ b/assignment-3/kim_changsu_reyes-cortes_jesse_assignment3.ipynb
@@ -28,6 +28,189 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicting(Log):  [0, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#################             NAIVE BAYES CLASSIFIER             #################\n",
+    "\n",
+    "# part A: model code (design multinomial naive bayes)\n",
+    "\n",
+    "data_A = [[2, 3, 2, 2, 3, 2, 2],\n",
+    "          [22, 22, 33, 2 , 2, 2],\n",
+    "          [3, 2, 4, 3, 8, 4],\n",
+    "          [2, 2, 3,2, 2, 2,2, 2, 2, 3],\n",
+    "          [2,3,2,4, 7,6,5,5,4],\n",
+    "          [2, 3, 9, 4, 4, 29, 29, 2],\n",
+    "          [2,9, 7, 8 , 23, 43, 29, 28],\n",
+    "          [2, 43,2, 4,3, 5, 4, 9, 20, 24],\n",
+    "          [2, 4 ,3 ,2, 3, 2],\n",
+    "          [2, 4, 8, 8, 4, 2,3,53],\n",
+    "          [4, 34, 23, 23, 23,2],\n",
+    "          [2, 3,3,2, 3,4, 5,3, 4],\n",
+    "          [2, 4, 2, 3, 2, 4, 5],\n",
+    "          [22,43,23,23,43,34,23,23,5],\n",
+    "          [23, 8, 2, 2, 3, 4]\n",
+    "         ]\n",
+    "label_A = [1,0,1,0,1,1,0,1,0,1,1,0,0,1,0]\n",
+    "\n",
+    "test_A = [[2,4, 4, 23, 4, 4, 4],\n",
+    "          [2, 3, 2, 3, 2, 3],\n",
+    "          [4,5,4,3,3,2,43,32],\n",
+    "          [3,2,3,2,2,3],\n",
+    "          [2,3,2,3,2,4,2,42],\n",
+    "          [23,4,2,32]]\n",
+    "\n",
+    "test_A_labels = [0,0,1,0,1,0]\n",
+    "\n",
+    "class Multinomial_NB:\n",
+    "    def __init__(self, alpha=1.0):\n",
+    "        self.X = np.array([])\n",
+    "        self.Y = np.array([])\n",
+    "        self.alpha = alpha\n",
+    "        self.prior_h = 0\n",
+    "        self.prior_s = 0\n",
+    "        self.h_total = 0\n",
+    "        self.s_total = 0\n",
+    "        self.hashtable = {\"spam\" : {}, \"ham\" : {}}\n",
+    "        \n",
+    "        \n",
+    "    def fit(self, X, Y, **kwargs):\n",
+    "        self.X = X\n",
+    "        self.Y = Y\n",
+    "        \n",
+    "        if \"alpha\" in kwargs:\n",
+    "            self.apha = kwargs[\"alpha\"]\n",
+    "        \n",
+    "        h_count = 0\n",
+    "        s_count = 0\n",
+    "        \n",
+    "        for i in range(0, len(self.X)):\n",
+    "            c = \"spam\"\n",
+    "            \n",
+    "            # spam\n",
+    "            if(self.Y[i]==1):\n",
+    "                s_count = s_count + 1\n",
+    "                self.s_total = self.s_total + len(self.X[i])\n",
+    "                c = \"ham\"\n",
+    "            # not spam\n",
+    "            else:\n",
+    "                h_count = h_count + 1\n",
+    "                self.h_total = self.h_total + len(self.X[i])\n",
+    "                \n",
+    "            for j in self.X[i]:\n",
+    "                #if it j feature is already in hashtable\n",
+    "                if str(j) in self.hashtable[c]:\n",
+    "                    self.hashtable[c][str(j)] = self.hashtable[c][str(j)] + 1\n",
+    "                else:\n",
+    "                    self.hashtable[c][str(j)] = 1\n",
+    "\n",
+    "       # store classes as pie             \n",
+    "        self.prior_h = h_count/(h_count + s_count)\n",
+    "        self.prior_s = s_count/(h_count + s_count)\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "    def predict(self, X):\n",
+    "        \n",
+    "        predict = []\n",
+    "        \n",
+    "        log_post = self.predict_log_proba(X)\n",
+    "        \n",
+    "        for i in range(0, len(X)):\n",
+    "         \n",
+    "            prob_s = math.log(self.prior_s) + log_post[i][0]\n",
+    "            prob_h = math.log(self.prior_s) + log_post[i][1]\n",
+    "                \n",
+    "            if(prob_s > prob_h):\n",
+    "                predict.append(1)\n",
+    "            else:\n",
+    "                predict.append(0)\n",
+    "                \n",
+    "        return predict\n",
+    "    \n",
+    "    \n",
+    "    def predict_log_proba(self, X):\n",
+    "        \n",
+    "        log_post = np.zeros((len(X),2))\n",
+    "        \n",
+    "        for i in range(0, len(X)):\n",
+    "            \n",
+    "            #predicting spam\n",
+    "            post_s = 0\n",
+    "            #predicting ham\n",
+    "            post_h = 0\n",
+    "            for j in X[i]:\n",
+    "                p_s = self.alpha\n",
+    "                p_h = self.alpha\n",
+    "                if str(j) in self.hashtable[\"spam\"]:\n",
+    "                    p_s = p_s + self.hashtable[\"spam\"][str(j)]\n",
+    "                if str(j) in self.hashtable[\"ham\"]:\n",
+    "                    p_h = p_h + self.hashtable[\"ham\"][str(j)]\n",
+    "                    \n",
+    "                post_s = post_s + math.log(p_s/self.s_total)\n",
+    "                post_h = post_h + math.log(p_h/self.h_total)\n",
+    "      \n",
+    "            post_s = math.log(self.prior_s) + p_s\n",
+    "            \n",
+    "            post_h = math.log(self.prior_h) + p_h\n",
+    "            \n",
+    "            log_post[i][0] = post_s\n",
+    "            log_post[i][1] = post_h\n",
+    "                \n",
+    "        return log_post\n",
+    "    \n",
+    "\n",
+    "    def predict_prob(self, X):\n",
+    "        \n",
+    "        predict = []\n",
+    "        \n",
+    "        for i in range(0, len(X)):\n",
+    "            \n",
+    "            #predicting spam\n",
+    "            prob_s = 1\n",
+    "            #predicting ham\n",
+    "            prob_h = 1\n",
+    "            for j in X[i]:\n",
+    "                p_s = self.alpha\n",
+    "                p_h = self.alpha\n",
+    "                if str(j) in self.hashtable[\"spam\"]:\n",
+    "                    p_s = p_s + self.hashtable[\"spam\"][str(j)]\n",
+    "                if str(j) in self.hashtable[\"ham\"]:\n",
+    "                    p_h = p_h + self.hashtable[\"ham\"][str(j)]\n",
+    "                    \n",
+    "                prob_s = prob_s * (p_s/self.s_total)\n",
+    "                prob_h = prob_h * (p_h/self.h_total)\n",
+    "      \n",
+    "            prob_s = self.prior_s * p_s\n",
+    "            \n",
+    "            prob_h = self.prior_h * p_h\n",
+    "                \n",
+    "            if(prob_s > prob_h):\n",
+    "                predict.append(1)\n",
+    "                \n",
+    "            else:\n",
+    "                predict.append(0)\n",
+    "                \n",
+    "        return predict\n",
+    "        \n",
+    "        \n",
+    "model = Multinomial_NB()\n",
+    "model.fit(data_A, label_A)\n",
+    "Y_hat = model.predict(test_A)\n",
+    "print(\"Predicting(Log): \", Y_hat)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -667,18 +850,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'a' is not defined",
+     "evalue": "name 'mul_NP' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-76-94654b5bc7d8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0malpha\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m0.0001\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.001\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.01\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1.0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1.5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2.0\u001b[0m\u001b[1;33m]\u001b[0m      \u001b[1;31m#hyperparameter\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mscore\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m:\u001b[0m                                                 \u001b[1;31m#loop hyperparameter and\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[0mmul_NB\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mMultinomial_NB\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mmul_NP\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m                   \u001b[1;31m#need to put parameter\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'a' is not defined"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-103-3873155c51c3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m:\u001b[0m                                                 \u001b[0;31m#loop hyperparameter and\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mmul_NB\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMultinomial_NB\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mmul_NP\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m                   \u001b[0;31m#need to put parameter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mprediction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmul_NP\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m#need to put parameter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mscore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m             \u001b[0;31m#need to put parameter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'mul_NP' is not defined"
      ]
     }
    ],
@@ -687,7 +870,7 @@
     "#11 Model selection via Hyper-parameter tuning\n",
     "alpha = [0.0001, 0.001, 0.01, 0,1, 0.5, 1.0, 1.5, 2.0]      #hyperparameter \n",
     "score = []\n",
-    "for i in a:                                                 #loop hyperparameter and \n",
+    "for i in alpha:                                                 #loop hyperparameter and \n",
     "    mul_NB = Multinomial_NB(i)\n",
     "    mul_NP.fit()                   #need to put parameter\n",
     "    prediction = mul_NP.predict()  #need to put parameter\n",
@@ -1186,7 +1369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
