--- a/assignment-3/kim_changsu_steiner_devan_reyes-cortes_jesse_assignment3.ipynb
+++ b/assignment-3/kim_changsu_steiner_devan_reyes-cortes_jesse_assignment3.ipynb
@@ -945,7 +945,7 @@
     "        else:\n",
     "            W.append([0, 0, 1])\n",
     "        Y_one_hot = np.array(W)\n",
-    "    return Y_one_hot;\n",
+    "    return Y_one_hot\n",
     "\n",
     "y = [0,1,2,0,2,0,1,2,1,1]\n",
     "print(\"Testing one_hot_label: \", one_hot_label(y))"
