Part B done, needs cleaned up

--- a/assignment-4/kim_changsu_steiner_devan_reyes-cortes_jesse_assignment4.ipynb
+++ b/assignment-4/kim_changsu_steiner_devan_reyes-cortes_jesse_assignment4.ipynb
@@ -410,13 +410,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "X_centered:  [[-0.24479416 -0.26297203 -0.27516089 ...  0.17340453  0.17672777\n",
+      "   0.18812485]\n",
+      " [-0.23020907 -0.26521203 -0.28327187 ...  0.19244688  0.19184855\n",
+      "   0.20324563]\n",
+      " [-0.20975299 -0.25594732 -0.28242364 ...  0.20756767  0.20696934\n",
+      "   0.21444485]\n",
+      " ...\n",
+      " [ 0.18215368  0.18301817  0.18877048 ...  0.08138923  0.08863404\n",
+      "   0.09218798]\n",
+      " [ 0.17236113  0.17714719  0.18261675 ...  0.07860649  0.0858513\n",
+      "   0.09332681]\n",
+      " [ 0.16787407  0.16873856  0.17869519 ...  0.07860649  0.0858513\n",
+      "   0.08940524]]\n",
+      "\n",
+      "eigenvectors:  [[ 0.00337387+0.j          0.03558488+0.j          0.02545469+0.j\n",
+      "  ... -0.00553232+0.00112585j -0.00553232-0.00112585j\n",
+      "   0.00224804+0.j        ]\n",
+      " [ 0.00365448+0.j          0.03658484+0.j          0.02552037+0.j\n",
+      "  ...  0.0029492 +0.00168772j  0.0029492 -0.00168772j\n",
+      "  -0.00018238+0.j        ]\n",
+      " [ 0.00397225+0.j          0.03809412+0.j          0.02599834+0.j\n",
+      "  ... -0.00378004-0.00357196j -0.00378004+0.00357196j\n",
+      "  -0.0003958 +0.j        ]\n",
+      " ...\n",
+      " [ 0.0157365 +0.j          0.04329607+0.j          0.00475373+0.j\n",
+      "  ...  0.00351227-0.02028146j  0.00351227+0.02028146j\n",
+      "   0.01819368+0.j        ]\n",
+      " [ 0.01576189+0.j          0.04300762+0.j          0.00470382+0.j\n",
+      "  ... -0.07853075+0.00607694j -0.07853075-0.00607694j\n",
+      "   0.00031299+0.j        ]\n",
+      " [ 0.01578019+0.j          0.04276036+0.j          0.00477533+0.j\n",
+      "  ...  0.04493534+0.00107142j  0.04493534-0.00107142j\n",
+      "  -0.02765387+0.j        ]]\n",
       "\n",
       "Projected Data Matrix (all PC):\n",
       " [[-4.22084831e+00+0.00000000e+00j -2.19329211e+00+0.00000000e+00j\n",
@@ -480,6 +514,8 @@
    "source": [
     "#ALL eigenvector example to compare results\n",
     "# Project the data on ALL eigenvectors, i.e., Principle components (PCs)\n",
+    "print(\"\\nX_centered: \", X_centered)\n",
+    "print(\"\\neigenvectors: \", eigenvectors)\n",
     "X_projected_all_pc = X_centered.dot(eigenvectors)\n",
     "print(\"\\nProjected Data Matrix (all PC):\\n\", X_projected_all_pc)\n",
     "\n",
@@ -499,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -551,29 +587,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Complex data not supported\n[[-1.46299600e-01+0.j -1.68055209e-01+0.j -1.89139565e-01+0.j ...\n   4.44734850e-03+0.j -5.16297641e-03+0.j -1.07063718e-02+0.j]\n [-1.38552615e-01+0.j -1.60949302e-01+0.j -1.82603517e-01+0.j ...\n   1.27837517e-02+0.j  2.69270706e-03+0.j -3.14225591e-03+0.j]\n [-1.26209245e-01+0.j -1.49605330e-01+0.j -1.72162310e-01+0.j ...\n   2.31305932e-02+0.j  1.22852849e-02+0.j  5.99753719e-03+0.j]\n ...\n [ 5.19950031e-03+0.j  6.88162056e-03+0.j  1.03806651e-02+0.j ...\n   3.14477935e-01+0.j  3.15457113e-01+0.j  3.16869537e-01+0.j]\n [-1.68951326e-03+0.j -1.99113451e-04+0.j  3.11049164e-03+0.j ...\n   2.97566458e-01+0.j  2.98340059e-01+0.j  2.99623063e-01+0.j]\n [-6.03583937e-03+0.j -4.55057300e-03+0.j -1.26071277e-03+0.j ...\n   2.81202499e-01+0.j  2.82041220e-01+0.j  2.83360245e-01+0.j]]\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-82-055af72ca5b1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# B.14 compute reconstruction error between mean centered data matrix X and reconstructed data matrix\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mreconstructionError\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmean_squared_error\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_centered\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_reconstructed\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Reconstruction Error: \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreconstructionError\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_regression.py\u001b[0m in \u001b[0;36mmean_squared_error\u001b[1;34m(y_true, y_pred, sample_weight, multioutput, squared)\u001b[0m\n\u001b[0;32m    250\u001b[0m     \"\"\"\n\u001b[0;32m    251\u001b[0m     y_type, y_true, y_pred, multioutput = _check_reg_targets(\n\u001b[1;32m--> 252\u001b[1;33m         y_true, y_pred, multioutput)\n\u001b[0m\u001b[0;32m    253\u001b[0m     \u001b[0mcheck_consistent_length\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    254\u001b[0m     output_errors = np.average((y_true - y_pred) ** 2, axis=0,\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_regression.py\u001b[0m in \u001b[0;36m_check_reg_targets\u001b[1;34m(y_true, y_pred, multioutput, dtype)\u001b[0m\n\u001b[0;32m     84\u001b[0m     \u001b[0mcheck_consistent_length\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     85\u001b[0m     \u001b[0my_true\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mensure_2d\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 86\u001b[1;33m     \u001b[0my_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_pred\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mensure_2d\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     87\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     88\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0my_true\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[1;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[0;32m    538\u001b[0m         \u001b[1;31m# result is that np.array(..) produces an array of complex dtype\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    539\u001b[0m         \u001b[1;31m# and we need to catch and raise exception for such cases.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 540\u001b[1;33m         \u001b[0m_ensure_no_complex_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    541\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    542\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mensure_2d\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36m_ensure_no_complex_data\u001b[1;34m(array)\u001b[0m\n\u001b[0;32m    345\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'kind'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkind\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"c\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    346\u001b[0m         raise ValueError(\"Complex data not supported\\n\"\n\u001b[1;32m--> 347\u001b[1;33m                          \"{}\\n\".format(array))\n\u001b[0m\u001b[0;32m    348\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    349\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Complex data not supported\n[[-1.46299600e-01+0.j -1.68055209e-01+0.j -1.89139565e-01+0.j ...\n   4.44734850e-03+0.j -5.16297641e-03+0.j -1.07063718e-02+0.j]\n [-1.38552615e-01+0.j -1.60949302e-01+0.j -1.82603517e-01+0.j ...\n   1.27837517e-02+0.j  2.69270706e-03+0.j -3.14225591e-03+0.j]\n [-1.26209245e-01+0.j -1.49605330e-01+0.j -1.72162310e-01+0.j ...\n   2.31305932e-02+0.j  1.22852849e-02+0.j  5.99753719e-03+0.j]\n ...\n [ 5.19950031e-03+0.j  6.88162056e-03+0.j  1.03806651e-02+0.j ...\n   3.14477935e-01+0.j  3.15457113e-01+0.j  3.16869537e-01+0.j]\n [-1.68951326e-03+0.j -1.99113451e-04+0.j  3.11049164e-03+0.j ...\n   2.97566458e-01+0.j  2.98340059e-01+0.j  2.99623063e-01+0.j]\n [-6.03583937e-03+0.j -4.55057300e-03+0.j -1.26071277e-03+0.j ...\n   2.81202499e-01+0.j  2.82041220e-01+0.j  2.83360245e-01+0.j]]\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "X_reconstructed_real: \n",
+      " [[-1.46299600e-01 -1.68055209e-01 -1.89139565e-01 ...  4.44734850e-03\n",
+      "  -5.16297641e-03 -1.07063718e-02]\n",
+      " [-1.38552615e-01 -1.60949302e-01 -1.82603517e-01 ...  1.27837517e-02\n",
+      "   2.69270706e-03 -3.14225591e-03]\n",
+      " [-1.26209245e-01 -1.49605330e-01 -1.72162310e-01 ...  2.31305932e-02\n",
+      "   1.22852849e-02  5.99753719e-03]\n",
+      " ...\n",
+      " [ 5.19950031e-03  6.88162056e-03  1.03806651e-02 ...  3.14477935e-01\n",
+      "   3.15457113e-01  3.16869537e-01]\n",
+      " [-1.68951326e-03 -1.99113451e-04  3.11049164e-03 ...  2.97566458e-01\n",
+      "   2.98340059e-01  2.99623063e-01]\n",
+      " [-6.03583937e-03 -4.55057300e-03 -1.26071277e-03 ...  2.81202499e-01\n",
+      "   2.82041220e-01  2.83360245e-01]]\n",
+      "\n",
+      "X_centered: \n",
+      " [[-0.24479416 -0.26297203 -0.27516089 ...  0.17340453  0.17672777\n",
+      "   0.18812485]\n",
+      " [-0.23020907 -0.26521203 -0.28327187 ...  0.19244688  0.19184855\n",
+      "   0.20324563]\n",
+      " [-0.20975299 -0.25594732 -0.28242364 ...  0.20756767  0.20696934\n",
+      "   0.21444485]\n",
+      " ...\n",
+      " [ 0.18215368  0.18301817  0.18877048 ...  0.08138923  0.08863404\n",
+      "   0.09218798]\n",
+      " [ 0.17236113  0.17714719  0.18261675 ...  0.07860649  0.0858513\n",
+      "   0.09332681]\n",
+      " [ 0.16787407  0.16873856  0.17869519 ...  0.07860649  0.0858513\n",
+      "   0.08940524]]\n",
+      "Reconstruction Error:  0.006231267592395679\n"
      ]
     }
    ],
    "source": [
     "# B.14 compute reconstruction error between mean centered data matrix X and reconstructed data matrix\n",
-    "reconstructionError = mean_squared_error(X_centered, X_reconstructed)\n",
+    "X_reconstructed_real = np.real_if_close(X_reconstructed, tol=1)\n",
+    "print(\"\\nX_reconstructed_real: \\n\", X_reconstructed_real)\n",
+    "print(\"\\nX_centered: \\n\", X_centered)\n",
+    "reconstructionError = mean_squared_error(X_centered, X_reconstructed_real)\n",
     "print(\"Reconstruction Error: \", reconstructionError)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "K Value:  10\n",
+      "(1200, 10)\n",
+      "(799, 1200)\n",
+      "Reconstruction Error:  0.006231267592395679\n",
+      "\n",
+      "K Value:  30\n",
+      "(1200, 30)\n",
+      "(799, 1200)\n",
+      "Reconstruction Error:  0.0014177248725266366\n",
+      "\n",
+      "K Value:  50\n",
+      "(1200, 50)\n",
+      "(799, 1200)\n",
+      "Reconstruction Error:  0.0005486760859574168\n",
+      "\n",
+      "K Value:  100\n",
+      "(1200, 100)\n",
+      "(799, 1200)\n",
+      "Reconstruction Error:  0.00014842260515433173\n",
+      "\n",
+      "K Value:  500\n",
+      "(1200, 500)\n",
+      "(799, 1200)\n",
+      "Reconstruction Error:  6.157419018916528e-07\n"
+     ]
+    }
+   ],
+   "source": [
+    "# B.15 perform steps 11-14 for k: 10, 30, 50, 100, 500\n",
+    "# for each k reconstruct image & print the value of k and reconstruction error\n",
+    "kValues = [10,30,50,100,500]\n",
+    "for k in kValues:\n",
+    "    print(\"\\nK Value: \", k)\n",
+    "    kEigenVectors = kTopEigenVectors(k)\n",
+    "    X_projected_top_pc = X_centered.dot(kEigenVectors)\n",
+    "    X_reconstructed = X_projected_top_pc.dot(kEigenVectors.T)\n",
+    "    X_reconstructed_real = np.real_if_close(X_reconstructed, tol=1)\n",
+    "    reconstructionError = mean_squared_error(X_centered, X_reconstructed_real)\n",
+    "    print(\"Reconstruction Error: \", reconstructionError)"
    ]
   },
   {
@@ -581,10 +693,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# B.15 perform steps 11-14 for k: 10, 30, 50, 100, 500\n",
-    "# for each k reconstruct image & print the value of k and reconstruction error"
-   ]
+   "source": []
   }
  ],
  "metadata": {
