updating the final project

--- a/final-project/kim_chungsu_steiner_devan_reyes-cortes_jesse_final-project.ipynb
+++ b/final-project/kim_chungsu_steiner_devan_reyes-cortes_jesse_final-project.ipynb
@@ -2,13 +2,279 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# csce478    Final Project: Stock prediction          Fall 2020                       Due: Nov 19  11am\n",
     "# contributers: Chungsu Kim, Devan Steiner, Jesse Reyes Cortes\n",
+    "\n",
+    "# simple explanation\n",
+    "\n",
+    "\n",
+    "# all imported libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# helper functions\n",
+    "def kFoldHelper(X,Y, k):\n",
+    "    \n",
+    "    kData = []\n",
+    "    x = np.array_split(X,k)\n",
+    "    y = np.array_split(Y,k)\n",
+    "    \n",
+    "    for i in range(0, k):\n",
+    "        x_train = pd.DataFrame([])\n",
+    "        y_train = pd.DataFrame([])\n",
+    "        x_test = np.array(x[i])\n",
+    "        y_test = np.array(x[i])\n",
+    "        for j in range(0,k):\n",
+    "            if i != j:\n",
+    "                x_train = x_train.append(pd.DataFrame(x[j]))\n",
+    "                y_train = y_train.append(pd.DataFrame(y[j]))\n",
+    "\n",
+    "        kData.append([np.array(x_train),np.squeeze(np.array(y_train)),x_test,y_test])\n",
+    "    \n",
+    "    return kData\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>URLs</th>\n",
+       "      <th>Headline</th>\n",
+       "      <th>Body</th>\n",
+       "      <th>Label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>3988</td>\n",
+       "      <td>3988</td>\n",
+       "      <td>3988</td>\n",
+       "      <td>3988.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>3332</td>\n",
+       "      <td>2823</td>\n",
+       "      <td>2863</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>http://beforeitsnews.com/u-s-politics/2017/10/...</td>\n",
+       "      <td>10/2 Happenings: HBD Ernie,Honest Eddie, Rex, ...</td>\n",
+       "      <td>A Potato Battery Can Light up a Room for Over ...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>143</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.468405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.499063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     URLs  \\\n",
+       "count                                                3988   \n",
+       "unique                                               3332   \n",
+       "top     http://beforeitsnews.com/u-s-politics/2017/10/...   \n",
+       "freq                                                    5   \n",
+       "mean                                                  NaN   \n",
+       "std                                                   NaN   \n",
+       "min                                                   NaN   \n",
+       "25%                                                   NaN   \n",
+       "50%                                                   NaN   \n",
+       "75%                                                   NaN   \n",
+       "max                                                   NaN   \n",
+       "\n",
+       "                                                 Headline  \\\n",
+       "count                                                3988   \n",
+       "unique                                               2823   \n",
+       "top     10/2 Happenings: HBD Ernie,Honest Eddie, Rex, ...   \n",
+       "freq                                                    6   \n",
+       "mean                                                  NaN   \n",
+       "std                                                   NaN   \n",
+       "min                                                   NaN   \n",
+       "25%                                                   NaN   \n",
+       "50%                                                   NaN   \n",
+       "75%                                                   NaN   \n",
+       "max                                                   NaN   \n",
+       "\n",
+       "                                                     Body        Label  \n",
+       "count                                                3988  3988.000000  \n",
+       "unique                                               2863          NaN  \n",
+       "top     A Potato Battery Can Light up a Room for Over ...          NaN  \n",
+       "freq                                                  143          NaN  \n",
+       "mean                                                  NaN     0.468405  \n",
+       "std                                                   NaN     0.499063  \n",
+       "min                                                   NaN     0.000000  \n",
+       "25%                                                   NaN     0.000000  \n",
+       "50%                                                   NaN     0.000000  \n",
+       "75%                                                   NaN     1.000000  \n",
+       "max                                                   NaN     1.000000  "
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# read in fake news data set\n",
+    "data = pd.read_csv(\"news-dataset.csv\", delimiter=',')\n",
+    "data = data[data[\"URLs\"].notna()]\n",
+    "data = data[data[\"Headline\"].notna()]\n",
+    "data = data[data[\"Body\"].notna()]\n",
+    "data = data[data[\"Label\"].notna()]\n",
+    "# data.reset_index(inplace=True)\n",
+    "\n",
+    "# # extract data\n",
+    "X = pd.DataFrame([])\n",
+    "X[\"URLs\"] = data[\"URLs\"]\n",
+    "X[\"Headline\"] = data[\"Headline\"]\n",
+    "X[\"Body\"] = data[\"Body\"]\n",
+    "\n",
+    "Y = data[\"Label\"]\n",
+    "\n",
+    "data.describe(include='all')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# normalize text\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test/predict (80% - 20% / k-fold)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# results\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train real world samples\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# results of real world samples\n"
    ]
   }
  ],
