update to the final project

--- a/assignment-3/kim_changsu_reyes-cortes_jesse_assignment3.ipynb
+++ b/assignment-3/kim_changsu_reyes-cortes_jesse_assignment3.ipynb
@@ -238,7 +238,6 @@
     "# B.2 read in SMSSpamCollection.csv as DataFrame\n",
     "df = pd.read_csv('SMSSpamCollection_copy', delimiter='\\t');\n",
     "df.columns = ['spam', 'text'] \n",
-
     "df['spam'] = np.where(df['spam'] == \"spam\", 1, 0) #broadcasting\n",
     "df.head()\n",
     "df.info()\n",
@@ -1221,7 +1220,7 @@
     "        else:\n",
     "            W.append([0, 0, 1])\n",
     "        Y_one_hot = np.array(W)\n",
-    "    return Y_one_hot;\n",
+    "    return Y_one_hot\n",
     "\n",
     "y = [0,1,2,0,2,0,1,2,1,1]\n",
     "print(\"Testing one_hot_label: \", one_hot_label(y))"
