--- a/assignment-3/kim_changsu_steiner_devan_reyes-cortes_jesse_assignment3.ipynb
+++ b/assignment-3/kim_changsu_steiner_devan_reyes-cortes_jesse_assignment3.ipynb
@@ -227,7 +227,7 @@
    "source": [
     "# part B: exploratory data analysis\n",
     "# B.2 read in SMSSpamCollection.csv as DataFrame\n",
-    "df = pd.read_csv('SMSSpamCollection_copy', delimiter='\\t');\n",
+    "df = pd.read_csv('SMSSpamCollection_copy', delimiter='\\t')\n",
     "df.columns = ['spam', 'text'] \n",
     "df['spam'] = np.where(df['spam'] == \"spam\", 1, 0) #broadcasting\n",
     "# df.head()\n",
@@ -1325,7 +1325,7 @@
     "g.map_diag(sns.distplot, kde = False, color = 'blue')\n",
     "#Density Plot and Correlation coefficients on the lower triangle\n",
     "g.map_lower(sns.kdeplot, cmap = cmap)\n",
-    "g.map_lower(corrfunc);"
+    "g.map_lower(corrfunc)"
    ]
   },
   {
