--- a/final-project/kim_chungsu_steiner_devan_reyes-cortes_jesse_final-project.ipynb
+++ b/final-project/kim_chungsu_steiner_devan_reyes-cortes_jesse_final-project.ipynb
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,38 @@
      "output_type": "stream",
      "text": [
       "Multinomial NB(assignment 3)\n",
-      "Lemmatized data:\n"
+      "Lemmatized data:\n",
+      "alpha:  0.001 \n",
+      "accuracy:  0.5056461731493099 \n",
+      "precision score:  0.46994535519125685 \n",
+      "recall:  0.46236559139784944 \n",
+      "\n",
+      "alpha:  1 \n",
+      "accuracy:  0.4993726474278545 \n",
+      "precision score:  0.46321525885558584 \n",
+      "recall:  0.45698924731182794 \n",
+      "\n",
+      "alpha:  2 \n",
+      "accuracy:  0.4993726474278545 \n",
+      "precision score:  0.46301369863013697 \n",
+      "recall:  0.4543010752688172 \n",
+      "\n",
+      "Stemmatized data:\n",
+      "alpha:  0.001 \n",
+      "accuracy:  0.5056461731493099 \n",
+      "precision score:  0.46994535519125685 \n",
+      "recall:  0.46236559139784944 \n",
+      "\n",
+      "alpha:  1 \n",
+      "accuracy:  0.5006273525721455 \n",
+      "precision score:  0.46467391304347827 \n",
+      "recall:  0.4596774193548387 \n",
+      "\n",
+      "alpha:  2 \n",
+      "accuracy:  0.5006273525721455 \n",
+      "precision score:  0.46467391304347827 \n",
+      "recall:  0.4596774193548387 \n",
+      "\n"
      ]
     }
    ],
@@ -3114,7 +3145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
